# HabitTracker

./: .env  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  notes.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: db.py  error_handlers.py  main.py  requirements.txt  seed.py
backend/api/: habit_log_routes.py  habit_routes.py  routes.py
backend/models/: __init__.py  habit.py  habit_entry.py  habit_log.py  models.py
backend/repositories/: habit_log_repository.py  habit_repository.py
backend/services/: habit_log_service.py  habit_service.py
backend/tests/: test_habit_log_service.py  test_habit_service.py
frontend/: ai_advice.py  app.py  stats.py  style.css
frontend/.streamlit/: config.toml  style.css
